# Fiboki_Trading

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  RULES.md  railway.json  render.yaml  requirements.txt
backend/: .dockerignore  Dockerfile  Procfile  alembic.ini  pyproject.toml  railway.worker.json  render.yaml
backend/alembic/: env.py
backend/alembic/versions/: 393a6aa3262b_initial_schema.py  a1b2c3d4e5f6_add_evaluation_phases.py  c3d4e5f6a7b8_add_execution_accounts_and_targets.py  d4e5f6a7b8c9_add_bot_signals_and_execution_attempts.py
backend/data_starter/histdata/audusd/: audusd_h1.parquet
backend/data_starter/histdata/gbpusd/: gbpusd_h1.parquet
backend/data_starter/histdata/nzdusd/: nzdusd_h1.parquet
backend/data_starter/histdata/usdchf/: usdchf_h1.parquet
backend/data_starter/histdata/usdjpy/: usdjpy_h1.parquet
backend/results/datapull/: coverage.json
backend/results/phase7/: gen1_research_results.csv  gen1_research_summary.json
backend/scripts/: backfill_stats.py  decay_monitor.py  download_dukascopy.py  evolve_family.py  full_pipeline.py  import_ledger.py  phase1_backfill.py  phase2_systematic.py  publish_candidates.py  resume_pull.py  review_candidates.py  run_gen1_research.py  tune_family.py
backend/src/fibokei/: __main__.py  cli.py  diag.py  worker.py
backend/src/fibokei/alerts/: events.py  telegram.py
backend/src/fibokei/api/: app.py  auth.py  deps.py  seed.py
backend/src/fibokei/api/routes/: __init__.py  agent_ledger.py  alerts.py  auth.py  backtests.py  bookmarks.py  charts.py  data.py  dev.py  drawings.py  execution.py  instruments.py  jobs.py  market_data.py  paper.py  research.py  strategies.py  system.py  trades.py  variations.py  watchlists.py
backend/src/fibokei/api/schemas/: __init__.py  backtests.py  charts.py  drawings.py  jobs.py  research.py
backend/src/fibokei/backtester/: config.py  display.py  engine.py  metrics.py  position.py  result.py  sizing.py
backend/src/fibokei/core/: feature_flags.py  instruments.py  models.py  signals.py  trades.py
backend/src/fibokei/data/: cache.py  ingestion.py  live_provider.py  loader.py  manifest.py  paths.py  sessions.py  validator.py
backend/src/fibokei/data/providers/: __init__.py  base.py  dukascopy.py  histdata.py  (+3 more)
backend/src/fibokei/db/: database.py  ledger_repository.py  models.py  repository.py
backend/src/fibokei/execution/: __init__.py  account_risk.py  adapter.py  broker_ledger.py  broker_symbols.py  ig_adapter.py  ig_client.py  ig_epic_audit.py  paper_adapter.py  reconciliation.py  router.py  router_factory.py  sizing.py  targets.py  tradovate_adapter.py  tradovate_client.py
backend/src/fibokei/indicators/: atr.py  base.py  candles.py  channels.py  fibonacci.py  ichimoku.py  moving_averages.py  oscillators.py  pivots.py  regime.py  registry.py  swing.py  trend.py  volatility.py  volume.py
backend/src/fibokei/jobs/: __init__.py  engine.py
backend/src/fibokei/paper/: account.py  bot.py  monitoring.py  orchestrator.py
backend/src/fibokei/research/: display.py  evolution.py  filter.py  matrix.py  monte_carlo.py  oos.py  pipeline.py  promotion.py  scenario.py  scorer.py  sensitivity.py  spec_tuning.py  validation.py  variation.py  walk_forward.py
backend/src/fibokei/risk/: engine.py  limits.py  promotion.py
backend/src/fibokei/strategies/: base.py  bot01_sanyaku.py  bot02_kijun_pullback.py  bot03_flat_senkou_b.py  bot04_chikou_momentum.py  bot05_mtfa_sanyaku.py  bot06_nwave.py  bot07_kumo_twist.py  bot08_kihon_suchi.py  bot09_golden_cloud.py  bot10_kijun_fib.py  bot11_sanyaku_fib_ext.py  bot12_kumo_fib_tz.py  bot13_chikou_session.py  bot13_golden_zone.py  bot14_fractal_golden_pocket.py  bot15_momentum_continuation.py  bot16_golden_momentum.py  bot17_gartley_harmonic.py  bot18_fib_ma_confluence.py  bot19_fib_bb_exhaustion.py  bot20_golden_pocket_divergence.py  bot21_fib_arc_breakout.py  bot22_fib_volume_confluence.py  registry.py
backend/tests/: conftest.py  test_account_reconciliation.py  test_account_risk.py  test_agent_ledger.py  test_api_auth.py  test_api_auth_cookies.py  test_api_backtests.py  test_api_charts.py  test_api_instruments.py  test_api_jobs.py  test_api_market_data.py  test_api_paper.py  test_api_research.py  test_api_research_candidates.py  test_api_shortlist.py  test_api_strategies.py  test_api_system.py  test_api_trades.py  test_atr.py  test_backtest_realism.py  test_backtester.py  test_backtester_determinism.py  test_bot01_integration.py  test_bot01_sanyaku.py  test_bot02_to_06.py  test_bot07_to_12.py  test_broker_ledger.py  test_candles.py  test_cli.py  test_data_cache.py  test_data_loader.py  test_data_models.py  test_data_validator.py  test_db.py  test_dev_seed.py  test_drawing_api.py  test_drawing_repository.py  test_evaluation_phases.py  test_evolution.py  test_execution_accounts.py  (+64 more)
(+169 files in other folders)
