[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fibokei"
version = "0.1.0"
description = "Multi-strategy automated trading platform using Ichimoku Cloud and Fibonacci systems"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "python-dateutil",
    "tabulate",
    "sqlalchemy>=2.0",
    "alembic",
    "aiosqlite",
    "fastapi>=0.100",
    "uvicorn[standard]",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "httpx",
    "psycopg2-binary",
    "yfinance",
    "sentry-sdk[fastapi]",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-timeout",
    "ruff",
    "mypy",
    "httpx",
]

[project.scripts]
fibokei = "fibokei.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fibokei"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Safety net: convert infinite hangs (real network sockets in yfinance/IG
# tests) into a clear per-test failure instead of stalling the whole suite.
# 120s is generous enough not to trip legitimate heavy-compute tests
# (research matrix, walk-forward, Monte Carlo). signal method is required to
# interrupt C-level curl_cffi calls (thread method cannot).
addopts = "--timeout=120 --timeout-method=signal"
markers = [
    "network: test makes real network calls (yfinance/IG REST). Run offline with -m 'not network'.",
    "slow: long-running compute (research matrix, walk-forward, Monte Carlo).",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Pure data registry. Each entry is a single Instrument(...) literal whose
# columns (symbol, name, asset_class, ig_epic) read more cleanly on one
# line — splitting would make the table harder to audit, not easier.
"src/fibokei/core/instruments.py" = ["E501"]
# ORM model declarations. SQLAlchemy column definitions are conventionally
# one-line statements; reformatting them buys no clarity and obscures the
# table layout.
"src/fibokei/db/models.py" = ["E501"]
